# EWOCvj2

./: .gitignore  .gitmodules  BUG_REPORT_TEMPLATE.md  CONTRIBUTING.md  FEATURE_REQUEST_TEMPLATE.md  Makefile.am  README.md  bins.cpp  bins.h  box.h  code-of-conduct.md  configure  configure.ac  effect.h  layer.h  loopstation.cpp  loopstation.h  makefile  mixer.cpp  node.cpp  node.h  osc.cpp  program.cpp  program.h  shader.fs  shader.vs  start.cpp  window.h
.github/ISSUE_TEMPLATE/: other-issues.md
EWOCvj2/: EWOCvj2.rc  EWOCvj2.sln  EWOCvj2.vcxproj  EWOCvj2.vcxproj.filters  resource.h  shader.fs
EWOCvj2/x64/Debug/: bins.new.obj.enc  recentprojectslist  shader.fs  vc142.idb
EWOCvj2/x64/Debug/EWOCvj2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EWOCvj2.lastbuildstate  EWOCvj2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
EWOCvj2/x64/Release/: shader.fs
linux/debug/: Makefile.am  Makefile.in  configure  configure.ac
linux/release/: Makefile.am  Makefile.in  configure  configure.ac
linux/release/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: AIStyleEffect.cpp  AIStyleTransfer.cpp  AIStyleTransfer.h  BeatDetektor.cpp  CMakeLists.txt  ComfyUIInstaller.cpp  ComfyUIInstaller.h  ComfyUIManager.cpp  ComfyUIManager.h  ComputeStyleTransfer.cpp  ComputeStyleTransfer.h  EWOCvj2.manifest  EWOCvj2.rc  FFGLHost.cpp  FFGLHost.h  ISFLoader.cpp  ISFLoader.h  ImageLoader.cpp  ImageLoader.h  InstallVerification.cpp  InstallVerification.h  NDIManager.cpp  NDIManager.h  ReCoNetInstaller.cpp  ReCoNetInstaller.h  ReCoNetTrainer.cpp  ReCoNetTrainer.h  RealESRGANInstaller.cpp  RealESRGANInstaller.h  RealESRGANWrapper.cpp  RealESRGANWrapper.h  RtMidi.cpp  SAMInstaller.cpp  SAMInstaller.h  SAMSegmentation.cpp  SAMSegmentation.h  UPnPPortMapper.cpp  UPnPPortMapper.h  UniformCache.cpp  UniformCache.h  (+38 more)
src/custom_nodes/ComfyUI-SAM3/: LICENSE  README.md  __init__.py  comfy-env.toml  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt  sam3_server.py
src/custom_nodes/ComfyUI-SAM3/nodes/: __init__.py  inference_reconstructor.py  load_model.py  sam3_interactive.py  sam3_model_patcher.py  sam3_video_nodes.py  segmentation.py  utils.py  video_state.py
src/custom_nodes/ComfyUI-SAM3/nodes/sam3_lib/: __init__.py  model_builder.py  sam3_video_predictor.py
src/custom_nodes/ComfyUI-SAM3/nodes/sam3_lib/model/: decoder.py  edt.py  geometry_encoders.py  io_utils.py  position_encoding.py  sam3_image.py  sam3_image_processor.py  sam3_tracker_base.py  sam3_tracker_utils.py  sam3_tracking_predictor.py  sam3_video_base.py  sam3_video_inference.py  tokenizer_ve.py  vl_combiner.py
src/custom_nodes/ComfyUI-SAM3/nodes/sam3_lib/model/utils/: sam1_utils.py  sam2_utils.py
src/custom_nodes/ComfyUI-SAM3/nodes/sam3_lib/perflib/: connected_components.py  nms.py
src/custom_nodes/ComfyUI-SAM3/nodes/sam3_lib/sam/: transformer.py
src/custom_nodes/ComfyUI-SAM3/web/: sam3-editor.js  sam3_bbox_widget.js  sam3_multiregion_widget.js  sam3_points_widget.js  sam3_video_dynamic.js
src/custom_nodes/ComfyUI-SAM3/workflows/: image_seg_point.json  image_seg_point_refinement.json  image_seg_text.json  scene_seg.json  video_point_prompt.json
src/scripts/: build_video_dataset.py  download_content.py  download_video_dataset.py  loss_functions.py  loss_functions2.py  loss_functions_vgg19_backup.py  reconet_model.py  reconet_model2.py  reconet_model_vgg19_backup.py  test_gram.py  test_weights.py  train_reconet.py  train_reconet2.py  train_reconet_vgg19_backup.py  upscale_edvr.py  upscale_flashvsr.py
src/workflows/flux/: image_to_image.json  image_to_image_enhanced.json  text_to_image.json  text_to_image_enhanced.json
src/workflows/flux2klein/: image_to_image.json  text_to_image.json
src/workflows/hunyuan/: batch_variation.json  batch_variation_i2v.json  batch_variation_t2v.json  controlnet_canny.json  frame_interpolation.json  image_to_motion.json  remix_clip.json  remix_clip_styled.json  text_to_video.json  upscale.json  video_continuation.json
src/workflows/hunyuan_full/: batch_variation_i2v.json  batch_variation_t2v.json  image_to_motion.json  remix_clip.json  style_to_video.json  text_to_video.json  upscale.json  video_continuation.json
src/workflows/sam/: propagation.json  segmentation.json
src/workflows/sd_animatediff/: batch_variation.json  character.json  controlnet_director.json  frame_interpolation.json  image_to_motion.json  kaleidoscope.json  morphing.json  remix_clip.json  style_transfer.json  text_to_video.json  texture_evolution.json  upscale.json
windows/debug/: Makefile.am  configure.ac
windows/release/: Makefile.am  configure.ac
